# AUC-Research-Assistant

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  docker-compose.yml  package-lock.json
Mock Filtering/: page.tsx  router.py
ResearchAssistantMobile/: App.tsx  MOBILE_APP_GUIDE.md  README.md  app.json  metro.config.js  package-lock.json  package.json
backend/: .gitignore  Dockerfile  TESTING_REPORT.md  clear_vector_db.py  devenv.nix  env.example  main.py  main_simple.py  pyproject.toml  requirements.txt  test_api_endpoints.py  test_components.py  test_database_connectors.py  test_server.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  chat_completions.py  query.py  search.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/schemas/: __init__.py  search.py
backend/app/services/: __init__.py  cohere_reranker.py  embedding_client.py  federated_search_service.py  llm_client.py  llm_service.py  rate_limiter.py
backend/app/services/database_connectors/: __init__.py  arxiv_connector.py  base.py  searxng.py  semantic_scholar_connector.py
backend/auc_academic_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_main.py  test_search.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
frontend/: .gitignore  Dockerfile  devenv.nix  devenv.yaml  eslint.config.mjs  package-lock.json  package.json
mobile/: .gitignore  PROJECT_OVERVIEW.md  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  setup.sh  (+2 more)
(+55 files in other folders)
