[project]
name = "auc-academic-assistant-backend"
version = "0.1.0"
description = "The backend for the AUC Academic Assistant App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "chromadb>=1.0.15",
    "cohere>=5.16.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-core>=0.3.72",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2.11",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "mistralai>=1.9.3",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
